--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <h4>Título 4</h4>
     <h5>Título 5</h5>
     <h6>Título 6</h6>
+
+    <!--- Línea horizontal: tiqueta <hr> (horizontal rule) --->
+    <hr />
   </body>
 </html>
