Modificadores de texto

--- a/index.html
+++ b/index.html
@@ -16,5 +16,26 @@
 
     <!--- Línea horizontal: tiqueta <hr> (horizontal rule) --->
     <hr />
+
+    <!--- Párrafos: etiqueta <p> (paragraph) --- Alt+Z --->
+    <p>
+      <!--- Modificadores de texto --->
+      Lorem <strong>ipsum dolor sit amet</strong> consectetur adipisicing elit.
+      Nostrum <em>nam placeat hic cupiditate</em> impedit quod et quos dolorum
+      corporis <span>dicta minima,</span> veritatis ut deleniti magnam repellat
+      fugiat nulla. Itaque, laudantium.
+
+      <!--- Salto de línea: <br> (brake) --->
+      <br />
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      <a
+        href="https://www.tiktok.com/@takitocrochet/video/7427150273535151366"
+        target="_blank"
+        >Esto es un enlace con algo muy tierno.</a
+      >
+      Cupiditate eaque cumque veritatis minus impedit recusandae! Molestiae
+      cupiditate magni delectus, consectetur maiores veritatis aut culpa
+      repudiandae libero quo, debitis voluptates officia.
+    </p>
   </body>
 </html>
