--- a/index.html
+++ b/index.html
@@ -37,5 +37,22 @@
       cupiditate magni delectus, consectetur maiores veritatis aut culpa
       repudiandae libero quo, debitis voluptates officia.
     </p>
+
+    <!--- Lista desordenada: etiqueta <ul> (unorder list) --->
+    <ul>
+      <!--- Elemento de lista: etiqueta <li> (list) --->
+      <li>Manzana</li>
+      <li>Canela</li>
+      <li>Té</li>
+      <li>Galletas</li>
+    </ul>
+
+    <!--- Lista ordenada: etiqueta <ol> (order list) --->
+    <ol>
+      <li>Manzana</li>
+      <li>Canela</li>
+      <li>Té</li>
+      <li>Galletas</li>
+    </ol>
   </body>
 </html>
