--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
       repudiandae libero quo, debitis voluptates officia.
     </p>
 
+    <!--- Enlace a página externa (a youtube)--->
+    <a href="https://www.youtube.com/" target="_blank">Esto es un enlace.</a>
+
+    <!--- Enlace a página interna desde nuestro proyecto --->
+    <br />
+    <a href="contacto.html">Página de contacto</a>
+
     <!--- Lista desordenada: etiqueta <ul> (unorder list) --->
     <ul>
       <!--- Elemento de lista: etiqueta <li> (list) --->
