--- a/index.html
+++ b/index.html
@@ -61,5 +61,22 @@
       <li>Té</li>
       <li>Galletas</li>
     </ol>
+
+    <!--- Imágenes desde una URL externa --->
+    <img
+      src="https://i.pinimg.com/564x/48/ee/ab/48eeab94003a4450804d9cb33ddf3089.jpg"
+      width="400px"
+    />
+
+    <br />
+    <p>Cuando la página es completamente blanca:</p>
+    <br />
+    <img src="https://pbs.twimg.com/media/GSz8xCSXQAAVe8a.png" width="200px" />
+
+    <hr />
+
+    <!--- Imágenes en mi proyecto --->
+    <br />
+    <img src="imgs/gatito relax.jpeg" alt="gato tomándose una taza de café" />
   </body>
 </html>
